--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-transformer-sharp": "^2.5.20",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
