--- a/forecast/pyproject.toml
+++ b/forecast/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 torch = "^1.7.1"
 click = "^7.1.2"
 requests = "^2.25.1"
+lxml = "^4.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -18,6 +19,9 @@ numpy = "^1.19.5"
 matplotlib = "^3.3.3"
 flake8 = "^3.8.4"
 black = "^20.8b1"
+openpyxl = "^3.0.6"
+scikit-learn = "^0.24.1"
+jedi = "0.17.2"
 
 [tool.poetry.scripts]
 predict = 'forecast.cli:predict'
