--- a/forecast/pyproject.toml
+++ b/forecast/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["akita8 <mbianchi.akita@gmail.com>", "Nikos nikos.nakisph@gmail.com"]
 
 [tool.poetry.dependencies]
-python = "3.9.1"
+python = "^3.9.5"
 torch = "^1.7.1"
 click = "^7.1.2"
 requests = "^2.25.1"
@@ -21,7 +21,6 @@ flake8 = "^3.8.4"
 black = "^20.8b1"
 openpyxl = "^3.0.6"
 scikit-learn = "^0.24.1"
-jedi = "0.17.2"
 
 [tool.poetry.scripts]
 predict = 'forecast.cli:predict'
